<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linnearPickUpCustomer"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_radius_pickupcustomer"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/relativeCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call_black_24dp">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/civCall"
                    android:layout_marginTop="5dp"
                    android:text="@string/call"
                    android:textColor="#ffff"
                    android:textSize="24sp">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconchat">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/civChat"
                    android:layout_marginTop="5dp"
                    android:text="@string/chat"
                    android:textColor="#ffff"
                    android:textSize="24sp">

                </TextView>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnArrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button_pickup_customer"
                android:backgroundTint="#fff"
                android:text="@string/arrive"
                android:textColor="#77a3d9"
                android:textSize="18dp">

            </Button>

            <Button
                android:id="@+id/btnPickUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_pickup_customer"
                android:backgroundTint="#02b03c"
                android:text="@string/pick_up"
                android:textColor="#ffff"
                android:textSize="18dp">

            </Button>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>