<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#353535"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgIconapp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/iconapp">

                </ImageView>

                <TextView
                    android:id="@+id/txtTypeCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgIconapp"
                    android:text="VNGO-BIKE"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTypeCar"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgIconapp"
                    android:text="Code:B454"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/txtDeny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/deny"
                    android:textColor="#FF0000"
                    android:textSize="18dp"
                    android:textStyle="bold">

                </TextView>

            </RelativeLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/linePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgIconBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/iconblue">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/imgIconBlue"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/pick_up_recive"
                            android:textColor="#03A9F4"
                            android:textSize="16dp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:id="@+id/txtPickUp"
                            android:text="@string/_117_nguyen_nh_chi_u_p6_q3"
                            android:textColor="#000000"
                            android:textSize="16dp">

                        </TextView>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgIconYelow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/iconyellow">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/imgIconYelow"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/destination"
                            android:textColor="#E67E22"
                            android:textSize="16dp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:id="@+id/txtDestination"
                            android:text="117/Nguyen Đình Chiều,P6,Q3"
                            android:textColor="#000000"
                            android:textSize="16dp">

                        </TextView>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@drawable/view_dashed">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_price" />

                    <TextView
                        android:id="@+id/txtEstimatePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="50"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_km" />

                    <TextView
                        android:id="@+id/txtKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="1000"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



            <RelativeLayout
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button_login"
                android:backgroundTint="#33bd68"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textColor="#fff"
                    android:textSize="18dp">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtAccept"
                    android:src="@drawable/ic_check_black_24dp">

                </ImageView>

            </RelativeLayout>


    </LinearLayout>

</LinearLayout>