<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/fullapp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bill_detail"
                android:textColor="#fff"
                android:textSize="22dp">

            </TextView>
        </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/progressbarItem"
                    style="@style/SpinKitView.Wave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:SpinKit_Color="@color/tim" />

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recyclerViewBillDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </FrameLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:id="@+id/lineDetailTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="#ccc">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity_of_goods"
                        android:textSize="20dp">

                    </TextView>


                    <TextView
                        android:id="@+id/txtTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="20dp">

                    </TextView>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="#ccc">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="#000"
                        android:textSize="25sp">

                    </TextView>


                    <TextView
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:id="@+id/txtTotalBill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="22dp">

                    </TextView>


                </LinearLayout>

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/btnFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/custom_button"
                    android:backgroundTint="#33bd68"
                    android:text="The Food is ready!"
                    android:textColor="#fff">

                </Button>

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>

